Add Linkedin badge.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -41,6 +41,11 @@
                             </span>
                         </a>
                     </li>
+                    <li>
+                        <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="heshiebrody">
+                            <a class="LI-simple-link" href='https://www.linkedin.com/in/heshiebrody?trk=profile-badge'>Heshie B.</a>
+                        </div>
+                    </li>
                     {% endif %}
                 </ul>
                 <p class="copyright text-muted">Copyright &copy; {{ site.copyright_name }} {{ site.time | date: '%Y' }}</p>
@@ -57,3 +62,5 @@
 
 <!-- Custom Theme JavaScript -->
 <script src="{{ "/js/clean-blog.min.js " | prepend: site.baseurl }}"></script>
+<!-- Linkedin Javscript -->
+<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
