Update Linkedin badge with page icons.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -42,9 +42,12 @@
                         </a>
                     </li>
                     <li>
-                        <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="heshiebrody">
-                            <a class="LI-simple-link" href='https://www.linkedin.com/in/heshiebrody?trk=profile-badge'>Heshie B.</a>
-                        </div>
+                        <a href="https://www.linkedin.com/in/heshiebrody?trk=profile-badge">
+                            <span class="fa-stack fa-lg">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
                     </li>
                     {% endif %}
                 </ul>
