Remove custom linkedin js

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -42,7 +42,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com/in/heshiebrody?trk=profile-badge">
+                        <a href="https://www.linkedin.com/in/heshiebrody">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -65,5 +65,3 @@
 
 <!-- Custom Theme JavaScript -->
 <script src="{{ "/js/clean-blog.min.js " | prepend: site.baseurl }}"></script>
-<!-- Linkedin Javscript -->
-<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
